--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@mui/material": "^5.2.2",
         "@mui/styles": "^5.2.2",
         "@reduxjs/toolkit": "^1.4.0",
+        "chart.js": "^3.5.1",
         "clsx": "^1.1.1",
         "date-fns": "^2.27.0",
         "fontfaceobserver": "^2.1.0",
@@ -57,6 +58,7 @@
         "query-string": "^6.13.6",
         "react": "^17.0.2",
         "react-beautiful-dnd": "^13.0.0",
+        "react-chartjs-2": "^3.0.4",
         "react-datepicker": "^4.5.0",
         "react-dropzone": "^11.0.2",
         "react-helmet": "^6.1.0",
