--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
         "react-window": "^1.8.5",
         "redux": "^4.0.5",
         "redux-undo": "^1.0.1",
-        "styled-components": "^5.1.1"
+        "styled-components": "^5.1.1",
+        "victory": "^36.4.1"
     },
     "lint-staged": {
         "*.{js,jsx}": [
