--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "chart.js": "^3.8.0",
         "clsx": "^1.1.1",
         "date-fns": "^2.27.0",
+        "draft-js": "^0.11.7",
         "fontfaceobserver": "^2.1.0",
         "framer-motion": "^2.6.5",
         "history": "^5.0.0",
@@ -62,6 +63,7 @@
         "react-beautiful-dnd": "^13.0.0",
         "react-chartjs-2": "^4.1.0",
         "react-datepicker": "^4.5.0",
+        "react-draft-wysiwyg": "^1.14.7",
         "react-dropzone": "^11.0.2",
         "react-helmet": "^6.1.0",
         "react-helmet-async": "^1.0.6",
